src/test/resources/integration-test/bad-imports/in-func.expect

An error occurred:
in-func.twl
Error at line 6 character 5.
Cannot import here, all imports must be first.
