src/test/resources/integration-test/bad-imports/in-func.twl
import println from <io>

1 let test

def myfunc {
    import <maths>
}
